RESOLVED FIXED110617
[BlackBerry] Accept key events even when composing region is active.
https://bugs.webkit.org/show_bug.cgi?id=110617
Summary [BlackBerry] Accept key events even when composing region is active.
Mike Fenton
Reported 2013-02-22 09:49:29 PST
SSIA.
Attachments
Patch (2.38 KB, patch)
2013-02-22 09:56 PST, Mike Fenton
no flags
Patch (3.10 KB, patch)
2013-02-26 08:36 PST, Mike Fenton
no flags
Updated patch with space fixed. (3.11 KB, patch)
2013-02-27 06:57 PST, Mike Fenton
no flags
Fix missing header. (3.73 KB, patch)
2013-02-27 07:05 PST, Mike Fenton
no flags
Mike Fenton
Comment 1 2013-02-22 09:56:58 PST
Rob Buis
Comment 2 2013-02-22 10:25:23 PST
Comment on attachment 189786 [details] Patch Ok.
WebKit Review Bot
Comment 3 2013-02-22 12:00:58 PST
Comment on attachment 189786 [details] Patch Clearing flags on attachment: 189786 Committed r143767: <http://trac.webkit.org/changeset/143767>
WebKit Review Bot
Comment 4 2013-02-22 12:01:02 PST
All reviewed patches have been landed. Closing bug.
Mike Fenton
Comment 5 2013-02-26 08:32:36 PST
Previous patch caused regression when a raw modifier key came through. Updating to be more strict.
Mike Fenton
Comment 6 2013-02-26 08:36:40 PST
Yong Li
Comment 7 2013-02-26 11:55:53 PST
Comment on attachment 190294 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=190294&action=review > Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp:1669 > } > +bool InputHandler::isNavigationKey(unsigned character) const need a space?
Mike Fenton
Comment 8 2013-02-27 06:57:33 PST
Created attachment 190512 [details] Updated patch with space fixed.
Mike Fenton
Comment 9 2013-02-27 07:05:09 PST
Created attachment 190514 [details] Fix missing header.
Rob Buis
Comment 10 2013-02-27 07:06:19 PST
Comment on attachment 190514 [details] Fix missing header. LGTM.
WebKit Review Bot
Comment 11 2013-02-27 07:30:09 PST
Comment on attachment 190514 [details] Fix missing header. Rejecting attachment 190514 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 190514, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output: http://webkit-commit-queue.appspot.com/results/16831294
WebKit Review Bot
Comment 12 2013-02-27 08:28:01 PST
Comment on attachment 190514 [details] Fix missing header. Clearing flags on attachment: 190514 Committed r144193: <http://trac.webkit.org/changeset/144193>
WebKit Review Bot
Comment 13 2013-02-27 08:28:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.