[BlackBerry] Accept key events even when composing region is active. https://bugs.webkit.org/show_bug.cgi?id=110617

Reviewed by Rob Buis.

PR 293598.

Don't reject key events that arrive when composing region is active,
this can prevent navigation events from firing, instead end
the composition and process the key.

Reviewed Internally by Nima Ghanavatian.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::updateFormState):


Canonical link: https://commits.webkit.org/128897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143767 268f45cc-cd09-0410-ab3c-d52691b4dbfc